--- a/creed-email-app/main/default/classes/TriggerHook.cls
+++ b/creed-email-app/main/default/classes/TriggerHook.cls
@@ -1,11 +1,11 @@
 /**
- * @name EmailMessageTriggerHandler
+ * @name TriggerHook
  * @description this interface allows an external application access to this Email Applications EmailMessageTrigger to perform
  * operations when an email message is sent or received.
  * 
  * @author Creed Interactive (Andrew Frederick) October 2021
  */
-global interface EmailMessageTriggerHandler {
+global interface TriggerHook {
     void beforeInsert( Map<Id, EmailMessage> newMap );
     void beforeUpdate( Map<Id, EmailMessage> oldMap, Map<Id, EmailMessage> newMap );
     void beforeDelete( Map<Id, EmailMessage> oldMap, Map<Id, EmailMessage> newMap );
